2001-12-04  Rob Browning  <rlb@defaultvalue.org>

	* src/scm/main.scm: merge bootstrap.scm contents here and
	rearrange code to eliminate most, if not all top-level activities.

	* src/scm/.cvsignore: remove bootstrap.scm and add build-config.scm.

	* src/scm/Makefile.am: remove depend.scm and handle switch from
	bootstrap.scm to main.scm and build-config.scm.

	* src/scm/build-config.scm.in: new file -- keep all the
	auto-generated bits (and only those) here.

	* src/scm/doc.scm (gnc:load-help-topics): just use
	%search-load-path for now, though in the future these files
	probably ought to be elsewhere.

	* src/scm/path.scm (gnc:default-doc-dirs): match build-config.scm
	var names for help dir.

	* src/scm/command-line.scm: add other env var lookups as part of
	startup changes.  Change bootstrap to main.
	(gnc:*load-path*): eliminate.

	* src/gnc-module/gnc-module.c: remove guile includes.

	* src/gnc-module/Makefile.am (libgncmodule_la_LIBADD): remove
	guile libs -- not needed any more.

	* src/engine/test/test-period.c: must load the engine
	before using it, and check to make sure the load works.

	* src/engine/test/test-group-vs-book.c (main_helper): check for
	failure loading the engine.

	* src/bin/overrides/gnucash-build-env.in: part 1 of startup
	changes -- use envt vars for more bits: GNC_CONFIG_DIR,
	GNC_SHARE_DIR, and GNC_DOC_PATH now.

	* src/bin/overrides/gnucash: use main, not bootstrap.

	* src/app-utils/app-utils.scm: accomodate removal of
	utilities.scm, and use main not bootstrap.

	* src/app-utils/utilities.scm: code moved to main.scm -- needed
	eariler in boot process.

	* src/app-utils/Makefile.am (gncscm_DATA): remove utilities.scm.

	* Makefile.am (TAGS): modify to fix the problem where you had to
	run make twice to get it to succeed.

	* Makefile.TAGS: new file.

	* src/scm/depend.scm: deleted.

	* src/report/standard-reports/net-barchart.scm: rename bootstrap to main.

	* src/report/standard-reports/category-barchart.scm: rename